# fastapi-langchain-sqlmodel

./: pyproject.toml
src/: .env
src/wuyou/: runserver.py
src/wuyou/agent/node/: MessageGraph.py  MessageNode.py  MessageState.py
src/wuyou/app/: ChainRouter.py  MessageRouter.py  PromptRouter.py  __init__.py
src/wuyou/app/db/: SaveMessageDB.py
src/wuyou/config/: DBConfig.py  Settings.py
src/wuyou/domain/: AiMessages.py
src/wuyou/domain/po/: SaveMessage.py
tests/: RagBasic.py  RagRead.py
