[project]
name = "wuyou"
version = "0.1.0"
description = ""
authors = [
    {name = "king",email = "3371715457@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "wuyou", from = "src"}]
# python的包版本管理
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
uvicorn = "0.40.0"
fastapi = "0.128.0"
langchain-ollama = "1.0.1"
pydantic = "2.12.5"
langchain-community = "0.4.1"
# 日志相关的
loguru = "0.7.3"
# 加载环境变量相关的
dotenv = "0.9.9"
# 引入sqlmodel
sqlmodel = "0.0.31"
# pg数据库用的
asyncpg = "0.31.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
